# Podcast_Script_Generator

./: .gitignore  README.md  main.py  problem_statement.txt  pyproject.toml
notebooks/: test.ipynb
src/: backend.py  frontend.py
