[project]
name = "asl-podcast-script-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-mistralai>=1.1.2",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 320
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]  # errors, flakes, imports, bugbear
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"